feat(settings): Add version display in settings panel

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -2,7 +2,8 @@
     "app": {
         "title": "ForgeData",
         "settings": "Einstellungen",
-        "back": "Zurück"
+        "back": "Zurück",
+        "version": "Version"
     },
     "buttons": {
         "exportJson": "JSON exportieren",
