--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -2,7 +2,8 @@
     "app": {
         "title": "ForgeData",
         "settings": "Impostazioni",
-        "back": "Indietro"
+        "back": "Indietro",
+        "version": "Versione"
     },
     "buttons": {
         "exportJson": "Esporta JSON",
